bug info display z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1061,7 +1061,7 @@ div .title__span:nth-child(2) span:nth-child(4) {
    background: white;
    box-shadow: 2px 7px 10px rgba(0, 0, 0, 0.2);
    position: absolute;
-   z-index: 70;
+   z-index: 85;
 }
 
 #answerPercentage{
